LU-977 osc: incorrect round robin allocation

protect round robin allocations with additional spinlock.
Move object preallcoation into separate thread, avoiding the
situation when two threads start allocation from same index.
Fix up osc_precreate() return values.

Xyratex-bug-id: MRP-206
Signed-off-by: Alexey Lyashkov <alexey_lyashkov@xyratex.com>
Signed-off-by: Bruce Korb <bruce_korb@xyratex.com>
Reviewed-by: Andriy Skulysh <Andriy_Skulysh@xyratex.com>
Reviewed-by: Alexander Boyko <alexander_boyko@xyratex.com>
Reviewed-by: Vitaly Fertman <vitaly_fertman@xyratex.com>
Change-Id: I31fa104383acdacba1f1c60ebf505d2c38cabcf7