lustre/include/obd.h
@@ -690,6 +690,7 @@ struct ost_pool {
 
 /* Round-robin allocator data */
 struct lov_qos_rr {
+	cfs_spinlock_t      lqr_alloc;       /* protect allocation index */
         __u32               lqr_start_idx;   /* start index of new inode */
         __u32               lqr_offset_idx;  /* aliasing for start_idx  */
         int                 lqr_start_count; /* reseed counter */
@@ -1323,6 +1324,19 @@ struct md_enqueue_info {
         unsigned int            mi_generation;
 };
 
+typedef enum {
+	/* the target has remaining objects, may or may not send precreation */
+	OBD_PRECR_EXISTS = 0,
+	/* the target has no remaining object, and the sent precreation RPC
+	 *              has not been completed yet. */
+	OBD_PRECR_WAIT = 1,
+	/* the target has no remaining object, and will not get any for a
+	 *              potentially very long time */
+	OBD_PRECR_LONG = 2,
+	/* the target is unusable */
+	OBD_PRECR_UNUSABLE = 1000,
+} obd_precr_status_t;
+
 struct obd_ops {
         cfs_module_t *o_owner;
         int (*o_iocontrol)(unsigned int cmd, struct obd_export *exp, int len,
@@ -1386,7 +1400,7 @@ struct obd_ops {
         int (*o_preallocate)(struct lustre_handle *, obd_count *req,
                              obd_id *ids);
         /* FIXME: add fid capability support for create & destroy! */
-        int (*o_precreate)(struct obd_export *exp);
+	obd_precr_status_t (*o_precreate)(struct obd_export *exp);
         int (*o_create)(const struct lu_env *env, struct obd_export *exp,
                         struct obdo *oa, struct lov_stripe_md **ea,
                         struct obd_trans_info *oti);
